--- a/src/styles.css
+++ b/src/styles.css
@@ -27,4 +27,14 @@ html, body{
 .square{
     flex: 1 1 0;
     border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lightblue;
+}
+
+.end{
+    background-color: lightgray;
+    border: 1px solid black;
+    padding: 8px 12px;
 }
